fix word-break in posts-item

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,6 +1,7 @@
 .posts-item {
   display: flex;
   gap: 16px;
+  word-break: initial;
 }
 
 @keyframes blinking {
